Started project page

--- a/edog.html
+++ b/edog.html
@@ -24,8 +24,37 @@
                 <a href=""><h2>About Me</h2></a>
             </div>
 
-            <div class="body">
-			    <p>eDog</p>
+            <div class="body2">
+                <div class="nav">
+                    <a href="">Overview</a>
+                    <a href="">Features</a>
+                    <a href="">Feature 1</a>
+                    <a href="">Technical Overview</a>
+                </div>
+                
+                <div class="glue"></div>
+
+			    <div class="info">
+                    <h2>Overview</h2>
+                    <p>A web app made for selling dogs. Made in Django (Python).</p>
+                    <img src="">
+                    
+                    <div class="links">
+                        <a href="">GitHub</a>
+                        <a href="">Website</a>
+                    </div>
+
+                    <h2>Features</h2>
+                    <p>Feature</p>
+                    <img>
+
+                    <h2>Technical Details</h2>
+                    <p>Details.</p>
+                </div>
+
+                <div class="glue"></div>
+
+                <div class="fakenavXXX"></div>
             </div>
 			
             <div class="glue"></div>
