Continued work on project page

--- a/edog.html
+++ b/edog.html
@@ -17,7 +17,7 @@
 
                 <div class="glue"></div>
 
-                <h1>eDog</h1>
+                <a href="edog.html"><h1>e-Dog</h1></a>
 
                 <div class="glue"></div>
 
@@ -26,35 +26,52 @@
 
             <div class="body2">
                 <div class="nav">
-                    <a href="">Overview</a>
-                    <a href="">Features</a>
-                    <a href="">Feature 1</a>
-                    <a href="">Technical Overview</a>
+                    <a href="#overview">Overview</a>
+                    <a href="#features">Features</a>
+                    <a href="#feature1" class="nested">└ users</a>
+                    <a href="#feature2" class="nested">└ posts</a>
+                    <a href="#feature3" class="nested">└ pins</a>
+                    <a href="#technical">Technical Details</a>
                 </div>
                 
                 <div class="glue"></div>
 
 			    <div class="info">
-                    <h2>Overview</h2>
-                    <p>A web app made for selling dogs. Made in Django (Python).</p>
-                    <img src="">
+                    <h2 id="overview">Overview</h2>
                     
                     <div class="links">
-                        <a href="">GitHub</a>
+                        <a href="https://github.com/Chritical-Code/E-Dog" target="_blank">GitHub</a>
+                        <div class="glue"></div>
+                        <p>-</p>
+                        <div class="glue"></div>
                         <a href="">Website</a>
                     </div>
 
-                    <h2>Features</h2>
-                    <p>Feature</p>
+                    <p>A web app for buying and selling dogs. Made in Django (Python).</p>
+                    <img src="pics/edog.png">
+
+                    <hr>
+                    <h2 id="features">Features</h2>
+                    <h3 id="feature1">Users</h3>
+                    <p>Users can sign up to create an account, sign in, view account details, and sign out.</p>
                     <img>
 
-                    <h2>Technical Details</h2>
-                    <p>Details.</p>
+                    <hr>
+                    <h3 id="feature2">Posts</h3>
+                    <p>Users can create posts for each dog they want to sell. Details can be filled out, and multiple photos can be used.</p>
+                    <img>
+
+                    <hr>
+                    <h3 id="feature3">Pins</h3>
+                    <p>Users can pin posts they find, making it easy to locate later.</p>
+                    <img>
+
+                    <hr>
+                    <h2 id="technical">Technical Details</h2>
+                    <p>This is a web application made using the Django framework. Django uses Python for the back-end, and Templates for the front-end. Templates are primarily HTML, and can include CSS and Javascript as well.</p>
                 </div>
 
                 <div class="glue"></div>
-
-                <div class="fakenavXXX"></div>
             </div>
 			
             <div class="glue"></div>
