--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 
                 <div class="glue"></div>
 
-                <h1>Portfolio</h1>
+                <a href="home.html"><h1>Portfolio</h1></a>
 
                 <div class="glue"></div>
 
@@ -26,36 +26,36 @@
 
             <div class="body">
 			    <a href="edog.html"><div class="project">
-                    <h2>eDog</h2>
-                    <p>A web app made for selling dogs. Made in Django (Python).</p>
+                    <h2>e-Dog</h2>
+                    <p>Web app for buying and selling dogs. Made in Django (Python).</p>
                     <img src="pics/edog.png">
                 </div></a>
                 <hr>
 
                 <a href=""><div class="project">
                     <h2>.Net</h2>
-                    <p>A web app for undetermined. Made with .NET (C#).</p>
+                    <p>Web app for undetermined. Made with .NET (C#).</p>
                     <img src="">
                 </div></a>
                 <hr>
 
                 <a href=""><div class="project">
                     <h2>React</h2>
-                    <p>A web app for making to-do lists. Made with React (JavaScript).</p>
+                    <p>Web app for making to-do lists. Made with React (JavaScript).</p>
                     <img src="">
                 </div></a>
                 <hr>
 
                 <a href=""><div class="project">
                     <h2>Pantry Pilot</h2>
-                    <p>A desktop application for managing inventory. Made with Java.</p>
+                    <p>Desktop application for managing inventory. Made with Java.</p>
                     <img src="pics/pantrypilot.png">
                 </div></a>
                 <hr>
 
                 <a href=""><div class="project">
                     <h2>GitHub Contributions</h2>
-                    <p>A highlight of my contributions to various open-source projects.</p>
+                    <p>Highlights of my contributions to various open-source projects.</p>
                     <img src="">
                 </div></a>
             </div>
