--- a/edog.html
+++ b/edog.html
@@ -25,53 +25,63 @@
             </div>
 
             <div class="body2">
-                <div class="nav">
-                    <a href="#overview">Overview</a>
-                    <a href="#features">Features</a>
-                    <a href="#feature1" class="nested">└ users</a>
-                    <a href="#feature2" class="nested">└ posts</a>
-                    <a href="#feature3" class="nested">└ pins</a>
-                    <a href="#technical">Technical Details</a>
-                </div>
-                
-                <div class="glue"></div>
-
-			    <div class="info">
-                    <h2 id="overview">Overview</h2>
+                <h2>Links</h2>
+                <div class="links">
+                    <a href="https://github.com/Chritical-Code/E-Dog" target="_blank">
+                        <div class="linkBox">
+                            <p>GitHub</p>
+                        </div>
+                    </a>
                     
-                    <div class="links">
-                        <a href="https://github.com/Chritical-Code/E-Dog" target="_blank">GitHub</a>
-                        <div class="glue"></div>
-                        <p>-</p>
-                        <div class="glue"></div>
-                        <a href="">Website</a>
+                    <div class="glue"></div>
+
+                    <a href="" target="_blank">
+                        <div class="linkBox">
+                            <p>Website</p>
+                        </div>
+                    </a>
+                </div>
+
+                <hr>
+                <h2>Overview</h2>
+                <p>A web app for buying and selling dogs. Made in Django (Python).</p>
+                <img src="pics/edog.png">
+
+                <hr>
+                <h2>Features</h2>
+                <div class="featureSection">
+                    <button>Left</button>
+
+                    <div class="featureShower">
+                        <div class="feature">
+                            <h3>Accounts</h3>
+                            <p>Users can sign up to create an account, sign in, view account details, and sign out.</p>
+                            <img>
+                        </div>
+
+                        <div class="feature">
+                            <h3>Posts</h3>
+                            <p>Users can create posts for each dog they want to sell.
+                                Details can be filled out, and multiple photos can be used.</p>
+                            <img>
+                        </div>
+
+                        <div class="feature">
+                            <h3>Pins</h3>
+                            <p>Users can pin posts they find, making them easy to locate later.</p>
+                            <img>
+                        </div>
                     </div>
 
-                    <p>A web app for buying and selling dogs. Made in Django (Python).</p>
-                    <img src="pics/edog.png">
-
-                    <hr>
-                    <h2 id="features">Features</h2>
-                    <h3 id="feature1">Users</h3>
-                    <p>Users can sign up to create an account, sign in, view account details, and sign out.</p>
-                    <img>
-
-                    <hr>
-                    <h3 id="feature2">Posts</h3>
-                    <p>Users can create posts for each dog they want to sell. Details can be filled out, and multiple photos can be used.</p>
-                    <img>
-
-                    <hr>
-                    <h3 id="feature3">Pins</h3>
-                    <p>Users can pin posts they find, making it easy to locate later.</p>
-                    <img>
-
-                    <hr>
-                    <h2 id="technical">Technical Details</h2>
-                    <p>This is a web application made using the Django framework. Django uses Python for the back-end, and Templates for the front-end. Templates are primarily HTML, and can include CSS and Javascript as well.</p>
+                    <button>Right</button>
                 </div>
 
-                <div class="glue"></div>
+                <hr>
+                <h2>Technical Details</h2>
+                <p>This is a web application made using the Django framework.
+                    Django uses Python for the back-end, and Templates for the front-end.
+                    Templates are primarily HTML, and can include CSS and Javascript as well.</p>
+            <div class="glue"></div>
             </div>
 			
             <div class="glue"></div>
