Contineud adjusting looks

--- a/edog.html
+++ b/edog.html
@@ -50,12 +50,12 @@
                 <hr>
                 <h2>Features</h2>
                 <div class="featureSection">
-                    <button>Left</button>
+                    <button class="arrow">Left</button>
 
                     <div class="featureShower">
                         <div class="feature">
                             <h3>Accounts</h3>
-                            <p>Users can sign up to create an account, sign in, view account details, and sign out.</p>
+                            <p>Users can sign up to create an account, log in, view account details, and log out.</p>
                             <img>
                         </div>
 
@@ -73,7 +73,7 @@
                         </div>
                     </div>
 
-                    <button>Right</button>
+                    <button class="arrow">Right</button>
                 </div>
 
                 <hr>
