Mostly finished edog showcase page

--- a/edog.html
+++ b/edog.html
@@ -37,15 +37,16 @@
 
                     <a href="" target="_blank">
                         <div class="linkBox">
-                            <p>Website</p>
+                            <p>Demo Site</p>
                         </div>
                     </a>
                 </div>
 
                 <hr>
                 <h2>Overview</h2>
-                <p>A web app for buying and selling dogs. Made in Django (Python).</p>
-                <img src="pics/edog.png">
+                <p>A web app for buying and selling dogs. 
+                    Made in Django (Python).</p>
+                <img src="pics/edog/overview.png">
 
                 <hr>
                 <h2>Features</h2>
@@ -55,21 +56,37 @@
                     <div class="featureShower">
                         <div class="feature">
                             <h3>Accounts</h3>
-                            <p>Users can sign up to create an account, log in, view account details, and log out.</p>
-                            <img>
+                            <p>Users can sign up to create an account, log in, 
+                                view account details, and log out.</p>
+                            <img src="pics/edog/account.png">
                         </div>
 
                         <div class="feature">
-                            <h3>Posts</h3>
-                            <p>Users can create posts for each dog they want to sell.
-                                Details can be filled out, and multiple photos can be used.</p>
-                            <img>
+                            <h3>Creating Posts</h3>
+                            <p>Users can create and edit posts for dogs they wish to sell.
+                            </p>
+                            <img src="pics/edog/edit.png">
+                        </div>
+
+                        <div class="feature">
+                            <h3>Viewing Posts</h3>
+                            <p>Users can click on posts to view more details about the dog.
+                                Each post will also link to the seller's profile.
+                            </p>
+                            <img src="pics/edog/post.png">
                         </div>
 
                         <div class="feature">
                             <h3>Pins</h3>
                             <p>Users can pin posts they find, making them easy to locate later.</p>
-                            <img>
+                            <img src="pics/edog/pin.png">
+                        </div>
+
+                        <div class="feature">
+                            <h3>Search</h3>
+                            <p>Users can search for specific breeds of dog, 
+                                making it easy to find what they are looking for.</p>
+                            <img src="pics/edog/search.png">
                         </div>
                     </div>
 
