--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 			    <a href="edog.html"><div class="project">
                     <h2>e-Dog</h2>
                     <p>Web app for buying and selling dogs. Made in Django (Python).</p>
-                    <img src="pics/edog.png">
+                    <img src="pics/edog/overview.png">
                 </div></a>
                 <hr>
 
