Added Pantry Pilot page.

--- a/home.html
+++ b/home.html
@@ -27,35 +27,21 @@
             <div class="body">
 			    <a href="edog.html"><div class="project">
                     <h2>e-Dog</h2>
-                    <p>Web app for buying and selling dogs. Made in Django (Python).</p>
+                    <p>Web app for buying and selling dogs. Made with Django (Python).</p>
                     <img src="pics/edog/overview.png">
                 </div></a>
                 <hr>
 
-                <a href=""><div class="project">
-                    <h2>.Net</h2>
-                    <p>Web app for undetermined. Made with .NET (C#).</p>
-                    <img src="">
-                </div></a>
-                <hr>
-
-                <a href=""><div class="project">
-                    <h2>React</h2>
-                    <p>Web app for making to-do lists. Made with React (JavaScript).</p>
-                    <img src="">
-                </div></a>
-                <hr>
-
-                <a href=""><div class="project">
+                <a href="pantrypilot.html"><div class="project">
                     <h2>Pantry Pilot</h2>
                     <p>Desktop application for managing inventory. Made with Java.</p>
-                    <img src="pics/pantrypilot.png">
+                    <img src="pics/pantrypilot/overview.jpg">
                 </div></a>
                 <hr>
 
-                <a href=""><div class="project">
-                    <h2>GitHub Contributions</h2>
-                    <p>Highlights of my contributions to various open-source projects.</p>
+                <a href="taskt.html"><div class="project">
+                    <h2>TaskT</h2>
+                    <p>Terminal application for making to-do lists. Made with Python.</p>
                     <img src="">
                 </div></a>
             </div>
