Finished TaskT page.

--- a/edog.html
+++ b/edog.html
@@ -97,7 +97,7 @@
                 <h2>Technical Details</h2>
                 <p>This is a web application made using the Django framework.
                     Django uses Python for the back-end, and Templates for the front-end.
-                    Templates are primarily HTML, and can include CSS and Javascript as well.
+                    Templates are primarily HTML, and can include CSS and JavaScript as well.
                     Data is stored in a SQL database.
                 </p>
             <div class="glue"></div>
