--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
                 <a href="taskt.html"><div class="project">
                     <h2>TaskT</h2>
                     <p>Terminal application for making to-do lists. Made with Python.</p>
-                    <img src="">
+                    <img src="pics/taskt/overview.jpg">
                 </div></a>
             </div>
 
