--- a/pantrypilot.html
+++ b/pantrypilot.html
@@ -44,7 +44,7 @@
 
                 <hr>
                 <h2>Overview</h2>
-                <p>A dekstop application for grocery store inventory mangagement. Made with Java.</p>
+                <p>A desktop application for grocery store inventory management. Made with Java.</p>
                 <img src="pics/pantrypilot/overview.jpg">
 
                 <hr>
@@ -72,7 +72,7 @@
                         <div class="feature">
                             <h3>View Inventory</h3>
                             <p>The entire inventory can be viewed here. 
-                                Multiple filters and sorting techniques are planned.</p>
+                                Filtering and sorting features are planned for future updates.</p>
                             <img src="pics/pantrypilot/view.jpg">
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                 <hr>
                 <h2>Technical Details</h2>
                 <p>This application was made with Java, relying on the Swing package for GUI elements.
-                    It was made in the IntelliJ IDEA IDE. Maven was used as the build tool. 
+                    It was developed in IntelliJ IDEA. Maven was used as the build tool. 
                     A SQL database is used to store data.
                 </p>
             <div class="glue"></div>
