--- a/taskt.html
+++ b/taskt.html
@@ -27,7 +27,7 @@
             <div class="body2">
                 <h2>Links</h2>
                 <div class="links">
-                    <a href="" target="_blank">
+                    <a href="https://github.com/Chritical-Code/TaskT" target="_blank">
                         <div class="linkBox">
                             <p>GitHub</p>
                         </div>
@@ -44,8 +44,8 @@
 
                 <hr>
                 <h2>Overview</h2>
-                <p></p>
-                <img src="">
+                <p>A gamified terminal application for creating to-do lists. Made with Python.</p>
+                <img src="pics/taskt/overview.jpg">
 
                 <hr>
                 <h2>Features</h2>
@@ -54,33 +54,41 @@
 
                     <div class="featureShower">
                         <div class="feature">
-                            <h3></h3>
-                            <p></p>
-                            <img src="">
+                            <h3>Checklists</h3>
+                            <p>Checklists can be created and modified.
+                                Tasks can be checked off as they are finished.</p>
+                            <img src="pics/taskt/checklist.jpg">
                         </div>
 
                         <div class="feature">
-                            <h3></h3>
-                            <p></p>
-                            <img src="">
+                            <h3>Timed Tasks</h3>
+                            <p>Tasks with a set time limit can be created. The timer can be
+                                started and stopped, if you need a break.
+                            </p>
+                            <img src="pics/taskt/timed.jpg">
                         </div>
 
                         <div class="feature">
-                            <h3></h3>
-                            <p></p>
-                            <img src="">
+                            <h3>Quick Tasks</h3>
+                            <p>Randomly selects a quick task for you to do. Randomize again
+                                until you get one you like.
+                            </p>
+                            <img src="pics/taskt/quick.jpg">
                         </div>
 
                         <div class="feature">
-                            <h3></h3>
-                            <p></p>
-                            <img src="">
+                            <h3>Gamification</h3>
+                            <p>To boost motivation, reward elements were added. Tasks can be
+                                completed to earn XP and money, which can be spent in the shop.
+                            </p>
+                            <img src="pics/taskt/shop.jpg">
                         </div>
 
                         <div class="feature">
-                            <h3></h3>
-                            <p></p>
-                            <img src="">
+                            <h3>Themes</h3>
+                            <p>There are multiple color schemes to choose from,
+                                to fit personal preference.</p>
+                            <img src="pics/taskt/theme.jpg">
                         </div>
                     </div>
 
@@ -89,7 +97,10 @@
 
                 <hr>
                 <h2>Technical Details</h2>
-                <p></p>
+                <p>This project was made to run in a console or terminal. It was made in
+                    Python, using the Curses library for UI control. Data is stored in a 
+                    SQL database.
+                </p>
             <div class="glue"></div>
             </div>
 			
