--- a/pantrypilot.html
+++ b/pantrypilot.html
@@ -21,7 +21,7 @@
 
                 <div class="glue"></div>
 
-                <a href=""><h2>About Me</h2></a>
+                <a href="aboutme.html"><h2>About Me</h2></a>
             </div>
 
             <div class="body2">
