Removed link from title

--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
 
                 <div class="glue"></div>
 
-                <a href="aboutme.html"><h1>About Me</h1></a>
+                <h1 class="title">About Me</h1>
 
                 <div class="glue"></div>
 
