--- a/edog.html
+++ b/edog.html
@@ -17,7 +17,7 @@
 
                 <div class="glue"></div>
 
-                <a href="edog.html"><h1>e-Dog</h1></a>
+                <h1 class="title">e-Dog</h1>
 
                 <div class="glue"></div>
 
