--- a/pantrypilot.html
+++ b/pantrypilot.html
@@ -17,7 +17,7 @@
 
                 <div class="glue"></div>
 
-                <a href="pantrypilot.html"><h1>Pantry Pilot</h1></a>
+                <h1 class="title">Pantry Pilot</h1>
 
                 <div class="glue"></div>
 
