--- a/taskt.html
+++ b/taskt.html
@@ -17,7 +17,7 @@
 
                 <div class="glue"></div>
 
-                <a href="taskt.html"><h1>TaskT</h1></a>
+                <h1 class="title">TaskT</h1>
 
                 <div class="glue"></div>
 
