--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 
                 <div class="glue"></div>
 
-                <a href="home.html"><h1>Portfolio</h1></a>
+                <h1 class="title">Portfolio</h1>
 
                 <div class="glue"></div>
 
