--- a/taskt.html
+++ b/taskt.html
@@ -51,7 +51,7 @@
                 <hr>
                 <h2>Features</h2>
                 <div class="featureSection">
-                    <button id="leftButton" class="arrow" onclick="moveLeft()">Left</button>
+                    <button id="leftButton" class="arrow" onclick="moveLeft()">&lt;</button>
 
                     <div id="featureShower" class="featureShower">
                         <div class="feature">
@@ -93,7 +93,7 @@
                         </div>
                     </div>
 
-                    <button id="rightButton" class="arrow" onclick="moveRight()">Right</button>
+                    <button id="rightButton" class="arrow" onclick="moveRight()">&gt;</button>
                 </div>
 
                 <hr>
