Removed placeholder links.

--- a/pantrypilot.html
+++ b/pantrypilot.html
@@ -28,19 +28,13 @@
             <div class="body2">
                 <h2>Links</h2>
                 <div class="links">
+                    <div class="glue"></div>
                     <a href="https://github.com/Chritical-Code/Pantry-Pilot" target="_blank">
                         <div class="linkBox">
                             <p>GitHub</p>
                         </div>
                     </a>
-                    
                     <div class="glue"></div>
-
-                    <a href="" target="_blank">
-                        <div class="linkBox">
-                            <p>Download</p>
-                        </div>
-                    </a>
                 </div>
 
                 <hr>
