--- a/edog.html
+++ b/edog.html
@@ -36,7 +36,7 @@
                     
                     <div class="glue"></div>
 
-                    <a href="" target="_blank">
+                    <a href="https://edog.chritical.dev" target="_blank">
                         <div class="linkBox">
                             <p>Demo Site</p>
                         </div>
