Added to edog technical details.

--- a/edog.html
+++ b/edog.html
@@ -96,10 +96,11 @@
 
                 <hr>
                 <h2>Technical Details</h2>
-                <p>This is a web application made using the Django framework.
-                    Django uses Python for the back-end, and Templates for the front-end.
-                    Templates are primarily HTML, and can include CSS and JavaScript as well.
-                    Data is stored in a SQL database.
+                <p>
+                    This is a web application built using the Django framework. The backend is written in
+                    Python. A SQL database is used to store data. The frontend uses Django's Templates, incorporating
+                    HTML, CSS, and JavaScript. The demo site is being hosted on a VPS, configured with
+                    Nginx as the proxy server and Gunicorn as the application server.
                 </p>
             <div class="glue"></div>
             </div>
