--- a/aboutme.html
+++ b/aboutme.html
@@ -44,9 +44,9 @@
 
                 <hr>
                 <h2>Overview</h2>
-                <p>I am a recent Software Development graduate looking to start my career. 
-                    I adapt to different frameworks easily and build a deep understanding 
-                    of how they function.</p>
+                <p>My name is Christopher Banks. I am a recent Software Development graduate 
+                    looking to start my career. I adapt to different frameworks easily and 
+                    build a deep understanding of how they function.</p>
 
                 <hr>
                 <h2>Education</h2>
