Updated about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -44,9 +44,11 @@
 
                 <hr>
                 <h2>Overview</h2>
-                <p>My name is Christopher Banks. I am a recent Software Development graduate 
-                    looking to start my career. I adapt to different frameworks easily and 
-                    build a deep understanding of how they function.</p>
+                <p>
+                    My name is Christopher Banks. I am a Software Development graduate looking to start my career. 
+                    I have experience developing full-stack applications in multiple frameworks and languages. 
+                    Back-end development in Python is my specialty.
+                </p>
 
                 <hr>
                 <h2>Education</h2>
