--- a/edog.html
+++ b/edog.html
@@ -5,7 +5,9 @@
 	<head>
 		<link rel="stylesheet" href="style.css">
 		<meta charset="utf-8" />
-		<title>Portfolio</title>
+        <link rel="icon" type="image/x-icon" href="pics/favicon.ico">
+
+		<title>Portfolio - e-Dog</title>
         <script src="slider.js"></script>
 	</head>
 
